--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,45 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-  }
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(29, 52, 97);
+    padding: 20px;
+    color: white;
+}
+
+main {
+    /* display: flex;
+    flex-wrap: wrap; */
+    padding-left: 160px;
+}
+
+.history-sidebar {
+    height: 100vh;
+    width: 160px;
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    background-color: rgb(89, 122, 214);
+    overflow-x: hidden;
+    padding: 20px;
+}
+
+.stock-current {
+    border-style: solid;
+}
+
+.news {
+    border-style: solid;
+    height: 80vh;
+}
+
+.top-stocks {
+    border-style: solid;
+}
