--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,8 @@
 
 :root {
     font-family: 'Josefin Sans', sans-serif;
-    background:oldlace;
+    background-image: linear-gradient(to right, rgb(7, 42, 65), black);
+    color: white;
 }
 
 header {
@@ -14,9 +15,11 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: rgb(29, 52, 97);
+    font-size: 30px;
+    /* background-color: rgb(29, 52, 97); */
     padding: 20px;
     color: white;
+    background-image: url(./images/—Pngtree—financial\ economy\ stock\ banner\ poster_1119485.jpg);
 }
 
 main {
@@ -26,35 +29,38 @@ main {
 }
 
 .history-sidebar {
-    height: 100vh;
     display: flex;
     align-content: center;
     flex-direction: column;
     justify-content: space-between;
-    height: 101vh;
+    height: 100vh;
     width: 160px;
     position: absolute;
     z-index: 1;
     left: 0;
-    background-color: rgb(89, 122, 214);
+    background-image: linear-gradient(to bottom, rgb(7, 42, 65), black);
     border-style: solid;
     overflow-x: hidden;
     padding: 20px;
+    border-radius: 10px;
 }
 
 .stock-current {
     border-style: solid;
     padding: 20px;
+    border-radius: 10px;
 }
 
 .news {
     border-style: solid;
+    border-radius: 10px;
     height: 80vh;
     padding: 20px;
 }
 
 .top-stocks {
     border-style: solid;
+    border-radius: 10px;
 }
 
 
