--- a/assets/style.css
+++ b/assets/style.css
@@ -6,8 +6,8 @@
 
 :root {
     font-family: 'Josefin Sans', sans-serif;
-    background-image: linear-gradient(to right, rgb(7, 42, 65), black);
-    color: white;
+    color: rgba(255, 255, 255, 0.863);
+    background-image: url(./images/—Pngtree—financial\ economy\ stock\ banner\ poster_1119485.jpg);
 }
 
 header {
@@ -18,7 +18,6 @@ header {
     font-size: 30px;
     /* background-color: rgb(29, 52, 97); */
     padding: 20px;
-    color: white;
     background-image: url(./images/—Pngtree—financial\ economy\ stock\ banner\ poster_1119485.jpg);
 }
 
@@ -49,6 +48,9 @@ main {
     border-style: solid;
     padding: 20px;
     border-radius: 10px;
+    background-image: linear-gradient(to right, rgb(7, 42, 65), black);
+    color: rgb(233, 233, 233);
+    opacity: .9;
 }
 
 .news {
@@ -56,11 +58,26 @@ main {
     border-radius: 10px;
     height: 80vh;
     padding: 20px;
+    background-image: linear-gradient(to right, rgb(7, 42, 65), black);
+    color: rgb(233, 233, 233);
+    opacity: .9;
 }
 
 .top-stocks {
     border-style: solid;
     border-radius: 10px;
+    padding: 20px;
+    background-image: linear-gradient(to right, rgb(7, 42, 65), black);
+    color: rgb(233, 233, 233);
+    opacity: .9;
 }
 
-
+.footer {
+    display: flex;
+    justify-content: center;
+    color: rgb(255, 223, 175);
+    width: 100%;
+    text-align: center;
+    margin-top: 20px;
+    padding: 10px;
+}
