--- a/assets/style.css
+++ b/assets/style.css
@@ -37,7 +37,7 @@ main {
     width: 160px;
     position: absolute;
     z-index: 1;
-    left: 0;
+    left: 10px;
     background-image: linear-gradient(to bottom, rgb(7, 42, 65), black);
     border-style: solid;
     overflow-x: hidden;
@@ -52,6 +52,8 @@ main {
     background-image: linear-gradient(to right, rgb(7, 42, 65), black);
     color: rgb(233, 233, 233);
     opacity: .9;
+    margin: 10px;
+    margin-top: 0px;
 }
 
 .news {
@@ -62,6 +64,7 @@ main {
     background-image: linear-gradient(to right, rgb(7, 42, 65), black);
     color: rgb(233, 233, 233);
     opacity: .9;
+    margin: 10px;
 }
 
 .top-stocks {
@@ -72,6 +75,7 @@ main {
     background-image: linear-gradient(to right, rgb(7, 42, 65), black);
     color: rgb(233, 233, 233);
     opacity: .9;
+    margin: 10px;
 }
 
 .news-title {
@@ -104,4 +108,14 @@ main {
 }
 .scroll {
    overflow-y:scroll; 
+}
+
+main {
+    margin: 10px;
+}
+
+
+#textbox, #button {
+    padding: 5px;
+    text-align: center;
 }
